--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,12 +25,17 @@
       p {
         color: black;
         font-family: Georgia, 'Times New Roman', Times, serif, Arial, sans-serif;
-        background-image: url("images/restaurant.jpg");
       }
       h3 {
         font-size: 3rem;
         color:steelblue;
         font-family:Verdana, Geneva, Tahoma, sans-serif
+        letter-spacing: 2px;
+      }
+      h4 {
+        font-size: 2.5rem;
+        color: slateblue;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
         letter-spacing: 2px;
       }
 
