--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,9 +11,10 @@
                      3px 3px 3px rgb(142, 191, 206);
         text-align: center;
         letter-spacing: 2px;
+        font-weight: bold;
       }
 
-      h1 + p + h2 + h3 {
+      p + h2 + h3 {
         font-weight: bold;
       }
 
@@ -50,5 +51,17 @@
       footer {
         font-size: 0.8rem;
       } 
+
+      header {
+        font-size: 0.8rem;
+      }
+
+      #Quellenverzeichnis {
+        h2 {
+          font-size: 4 rem;
+          color:steelblue; 
+          font-family:Verdana, Geneva, Tahoma, sans-serif
+        }
+      }
       
               
