--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,8 @@
       p {
         color: black;
         font-family: Georgia, 'Times New Roman', Times, serif, Arial, sans-serif;
+        font-size: 3rem;
+        font-size: 19px;
       }
       h3 {
         font-size: 3rem;
@@ -44,10 +46,6 @@
         bgcolor:rgb(216, 202, 137);
       } 
 
-      #wrapper {
-
-      }
-
       footer {
         font-size: 0.8rem;
       } 
@@ -56,12 +54,41 @@
         font-size: 0.8rem;
       }
 
-      #Quellenverzeichnis {
-        h2 {
-          font-size: 4 rem;
-          color:steelblue; 
-          font-family:Verdana, Geneva, Tahoma, sans-serif
-        }
-      }
       
+      
+#Tabelle {
+        font-family: sans-serif;
+}
+
+table {
+  border-collapse: collapse;
+  border: 4px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+td, th {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 20px;
+}
+
+th {
+  background-color: rgb(235,235,235);
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(even) td {
+  background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+  background-color: rgb(245,245,245);
+}
+
+caption {
+  padding: 12px;
+}
               
