--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,13 @@
         font-weight: bold;
       }
 
+      h2 {
+        font-size: 4rem;
+        text-transform: capitalize;
+        letter-spacing: 2px;
+        font-weight: bold;
+      }
+
       p + h2 + h3 {
         font-weight: bold;
       }
