--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
         text-shadow: 3px 3px 3px rgb(214, 106, 142),
                      3px 3px 3px rgb(214, 106, 142);
         text-align: center;
-        letter-spacing: 2px;
+        letter-spacing: 2px;w
         font-weight: bold;
       }
 
