--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
         text-shadow: 3px 3px 3px rgb(214, 106, 142),
                      3px 3px 3px rgb(214, 106, 142);
         text-align: center;
-        letter-spacing: 2px;w
+        letter-spacing: 2px;w3
         font-weight: bold;
       }
 
@@ -49,9 +49,10 @@
         letter-spacing: 2px;
       }
 
-      body {
+     
+   /*   body {
         bgcolor:rgb(216, 202, 137); /*Hintergrundfarbe*/
-      } 
+   /*   } */
 
       footer {
         font-size: 0.8rem;
@@ -61,8 +62,34 @@
         font-size: 0.8rem;
       }
 
+
+      .wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 100px 100px;
+        grid-gap: 10px;
+    }
+    
+
+      .box2 {
+        grid-column: 1;
+        grid-row: 1 / 3;
+      }
       
       
+
+      body {
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+      
+      
+
 #Tabelle {
         font-family: sans-serif; /*Schriftart des Textes in der Tabelle*/
 }
@@ -99,3 +126,6 @@ caption {
   padding: 12px;
 }
               
+body {
+  background-image: url("restaurant.jpg");
+}
