--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,3 +129,14 @@ caption {
 body {
   background-image: url("restaurant.jpg");
 }
+
+#textbox1 {
+  color: black;
+  text-align: center;
+  height:50%;
+  border: 30px solid rgba(114, 45, 60, 0.692);
+  padding: 50px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.712);
+  grid-column: 2/2;
+  grid-row: 2/2;
