--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@
       p {
         color: black;
         font-family: Georgia, 'Times New Roman', Times, serif, Arial, sans-serif;
-        font-size: 3rem;
+        font-size: 5rem;
       }
       h3 {
         font-size: 3rem;
@@ -43,35 +43,42 @@
       }
       h4 {
         font-size: 2rem;
-        color: rgb(212, 44, 44);
+        color: rgb(148, 28, 28);
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
         letter-spacing: 2rem; /* um die Schriftgrösse responsive zu machen müssen die Angaben entweder in rem oder % gemacht werden*/
       }
 
      
-   /*   body {
+   /*   body { Das wäre der Code für eine Hintergrundfarbe gewesen.
         bgcolor:rgb(216, 202, 137); /*Hintergrundfarbe*/
    /*   } */
 
-      footer {
+      #footer {
         font-size: 0.8rem;
+        grid-column: 2;
+        grid-row: 3;
       } 
 
       header {
         font-size: 0.8rem;
       }
 
-
-      .wrapper {
+      /*
+#wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 100px 100px;
         grid-gap: 10px;
-    }
+      }
     
       .box2 {
         grid-column: 1;
         grid-row: 1 / 3;
+      }
+
+      .box3 {
+        grid-column: 3;
+        grid-row: 3 / 3 ;
       }
       
       
@@ -86,6 +93,7 @@
         background-position: center;
       }
       
+      */
       
 
 #Tabelle {
@@ -96,7 +104,7 @@ table {
   border-collapse: collapse;
   border: 4px solid rgb(200,200,200);
   letter-spacing: 1px;
-  font-size: 0.8rem;
+  font-size: 2rem;
 }
 
 td, th {
@@ -128,6 +136,27 @@ body {
   background-image: url("restaurant.jpg");
 }
 
+        body {
+          width: 90%;
+          max-width: 90%;
+          margin: 2em auto;
+          font: 2rem/1.2 Arial, Helvetica, sans-serif;
+        }
+                        
+        .container > div {
+          border-radius: 5px;
+          padding: 10px;
+          background-color: rgb(148, 26, 34);
+        }
+
+                        .container {
+          display: grid;
+          grid-template-columns: repeat(auto-fill, minmax(40%, 2fr));
+          grid-auto-rows: minmax(10%, auto);
+          grid-gap: 20px;
+        }
+
+/* Hier sind meine gescheiterten Versuche um meine Informationen zu ordnen
 #textbox1 {
   color: black;
   text-align: center;
